--- a/package.json
+++ b/package.json
@@ -23,12 +23,17 @@
     "SHA256SUMS",
     "manifest.json",
     "lib/index.js",
-    "lib/fritz-adapter.js"
+    "lib/fritz-adapter.js",
+    "lib/fritz-client.js"
   ],
   "dependencies": {
-    "fritzapi": "^0.11.0"
+    "fritzapi": "^0.11.0",
+    "node-fetch": "^2.6.1",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
+    "@types/node-fetch": "^2.5.7",
+    "@types/xml2js": "^0.4.5",
     "typescript": "^4.0.3"
   }
 }
