--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Connect your Fritz! devices",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsc -p ."
   },
   "repository": {
@@ -34,6 +34,8 @@
   "devDependencies": {
     "@types/node-fetch": "^2.5.7",
     "@types/xml2js": "^0.4.5",
+    "jest": "^26.6.3",
+    "jest-fetch-mock": "^3.0.3",
     "typescript": "^4.0.3"
   }
 }
