--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
   },
   "devDependencies": {
     "@types/node-fetch": "^2.5.7",
+    "@types/ws": "^7.4.0",
     "@types/xml2js": "^0.4.5",
+    "gateway-addon": "^1.0.0",
     "jest": "^26.6.3",
     "jest-fetch-mock": "^3.0.3",
     "typescript": "^4.0.3"
