--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "jest",
-    "build": "tsc -p ."
+    "build": "node generate-config-interfaces.js && tsc -p ."
   },
   "repository": {
     "type": "git",
@@ -38,6 +38,7 @@
     "gateway-addon": "^1.0.0",
     "jest": "^26.6.3",
     "jest-fetch-mock": "^3.0.3",
+    "json-schema-to-typescript": "^10.1.1",
     "typescript": "^4.1.3"
   }
 }
