--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,10 +20,15 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Build project
+    - name: Install
       run: |
         npm ci
+    - name: Lint
+      run: |
+        npm run lint
+    - name: Build
+      run: |
         npm run build
+    - name: Test
+      run: |
         npm run test
-      env:
-        CI: true
