--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "jest",
+    "lint": "eslint src --ext .ts",
     "build": "node generate-config-interfaces.js && tsc -p ."
   },
   "repository": {
@@ -35,6 +36,9 @@
     "@types/node-fetch": "^2.5.7",
     "@types/ws": "^7.4.0",
     "@types/xml2js": "^0.4.7",
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
+    "eslint": "^7.17.0",
     "gateway-addon": "^1.0.0",
     "jest": "^26.6.3",
     "jest-fetch-mock": "^3.0.3",
